[gd_scene load_steps=8 format=3 uid="uid://b4yvvou6qwyrt"]

[ext_resource type="Script" uid="uid://cjsvliu8enyk1" path="res://sd_card_projectile.gd" id="1_yvpso"]
[ext_resource type="Texture2D" uid="uid://d1dbs51fx7sfx" path="res://Sd Card.jpg" id="2_u6smp"]

[sub_resource type="BoxMesh" id="BoxMesh_2shkr"]
size = Vector3(0.2, 0.3, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hd3kl"]
albedo_color = Color(0.16565639, 0.16565642, 0.16565639, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_0vb3d"]
size = Vector2(0.2, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_71vi8"]
albedo_texture = ExtResource("2_u6smp")

[sub_resource type="BoxShape3D" id="BoxShape3D_r8kxt"]
size = Vector3(0.2, 0.3, 0.05)

[node name="SDCardProjectile" type="Area3D"]
script = ExtResource("1_yvpso")

[node name="Visuals" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visuals"]
mesh = SubResource("BoxMesh_2shkr")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_hd3kl")

[node name="Sticker" type="MeshInstance3D" parent="Visuals"]
transform = Transform3D(1, 0, 0, 0, -4.3711385e-08, -0.99999994, 0, 0.99999994, -4.3711385e-08, 0, 0, 0.026)
mesh = SubResource("PlaneMesh_0vb3d")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_71vi8")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
text = "SD Card"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_r8kxt")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
